# NativeMinuit.jl

./: .gitignore  CHANGELOG.md  CITATION.cff  Project.toml  README.md  ROADMAP.md
.binder/: Project.toml  postBuild
BenchmarkExamples/: README.md  RESULTS.md
benchmark/: bench_migrad_suite.jl  compare_all.jl  dump_contour_points.jl  perf-config.toml  python_iminuit_bench.py
benchmark/cpp/: CMakeLists.txt  cpp_bench.cxx
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: AD_OFFSET_X3872.md  CPP_FIDELITY_AUDIT.md  DAVIDON_CXX_AUDIT.md  DESIGN.md  ERROR_ANALYSIS.md  GAP_AUDIT.md  IAM_CONVERGENCE_GAP.md  Project.toml  UPSTREAM.md  example.ipynb  example.jl  make.jl
ext/: JuMinuitAdvancedHMCExt.jl  JuMinuitClusteringExt.jl  JuMinuitDataFramesExt.jl  JuMinuitForwardDiffExt.jl  JuMinuitOptimExt.jl  JuMinuitPlotsExt.jl  NativeMinuitAdvancedHMCExt.jl  NativeMinuitClusteringExt.jl  NativeMinuitDataFramesExt.jl  NativeMinuitForwardDiffExt.jl  NativeMinuitOptimExt.jl  NativeMinuitPlotsExt.jl
scripts/: Manifest.toml  Project.toml  run_gate.sh
src/: JuMinuit.jl  NativeMinuit.jl  ad_gradient.jl  contours.jl  cost_functions.jl  davidon.jl  display.jl  edm.jl  eigen_corr.jl  error_sampling.jl  extremize.jl  fcn.jl  function_cross.jl  global_min.jl  gradient.jl  hesse.jl  hessian_gradient.jl  iminuit_compat.jl  linalg.jl  linesearch.jl  mcmc.jl  migrad.jl  migrad_bounded.jl  minos.jl  minuit.jl  negative_g2.jl  parameters.jl  plot_recipes.jl  plot_text.jl  posdef.jl  posterior.jl  precision.jl  precompile_workload.jl  priors.jl  resampling.jl  result.jl  scan.jl  seed.jl  serialize.jl  simplex.jl  (+5 more)
test/: runtests.jl  test_ad_gradient.jl  test_aqua_jet.jl  test_bayesian_bridge.jl  test_bounded_gauss_minos.jl  test_contour_exact.jl  test_contour_oracle.jl  test_contours.jl  test_cost_functions.jl  test_covariance_squeeze.jl  test_cpp_oracle.jl  test_davidon.jl  test_display.jl  test_edm.jl  test_eigen_corr.jl  test_error_sampling.jl  test_extremize.jl  test_fcn.jl  test_global_min.jl  test_gradient.jl  test_hesse.jl  test_hesse_oracle.jl  test_hesse_strategy.jl  test_iminuit_compat.jl  test_iminuit_compat_data.jl  test_jet_optanalysis.jl  test_linalg.jl  test_linesearch.jl  test_mcmc.jl  test_migrad.jl  test_migrad_bounded.jl  test_minos.jl  test_minos_oracle.jl  test_minuit.jl  test_minuit_mutators.jl  test_minuit_retry.jl  test_negative_g2.jl  test_nonfinite_fcn.jl  test_optim_bridge.jl  test_param_views.jl  (+18 more)
tools/: CMakeLists.txt  cpp_trace_harness.cxx  regen_reference.md
v0.3.0/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.3.1/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.4.1/: .documenter-siteinfo.json  index.html  objects.inv  (+1 more)
(+212 files in other folders)
